[package]
name = "peekbufread"
description = "Implements a peekable std::io::Read with support for checkpoints"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = [ "Fionn Langhans <fionn.langhans@gmail.com" ]
repository = "https://github.com/codefionn/peekbufread"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.5"
